tests/negative/conversions/conversion_implicit_string_int.tx
// EXPECTED: COMPILE_ERROR
// Description: Test implicit string to int assignment (should fail).

function main() {
    let s: string = "123";
    let i: int = s; // Error: Type mismatch
}
